<resources>
    <string name="app_name">Open link</string>
    <string name="ip_address">192.168.1.106</string>
    <string name="port_number">1007</string>
    <string name="port">Port</string>
    <string name="save_preference_button">Save preferences</string>
    <string name="load_preference_button">Load preferences</string>
    <string name="play_pause">> / II</string>
    <string name="minus_10_seconds">-10</string>
    <string name="plus_10_seconds">+10</string>
    <string name="minus_20_seconds">-20</string>
    <string name="plus_20_seconds">+20</string>
    <string name="volume_up">+</string>
    <string name="volume_down">-</string>
    <string name="mute_volume">Mute</string>
    <string name="open_link">Open link</string>
    <string name="ip">IP</string>
    <string name="volume">Volume</string>
    <string name="connected">connected</string>
    <string name="subtitle">S</string>
    <string name="subtitle_search">D</string>
    <string name="audio">A</string>
    <string name="off">OFF</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_off">OFF</string>
    <string name="bluetooth_on">ON</string>
    <string name="go">Go</string>
    <string name="skip_intro">Skip intro</string>
    <string name="history">History</string>
    <string name="shaders">Shaders</string>
    <string name="overlay">Overlay</string>
    <string name="force_subtitle_style">force subs style</string>
    <string name="sub_delay_plus">SUB +</string>
    <string name="sub_delay_minus">- SUB</string>

    <string-array name="remote_controllers_list">
        <item>MPC</item>
        <item>Netflix</item>
        <item>Emby</item>
    </string-array>


</resources>
